# suiflow

./: .env.example  .gitignore  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  routes-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
.next/dev/types/: routes.d.ts  validator.ts
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _global-error.html  _global-error.rsc  _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  (+2 more)
.next/types/: validator.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: CrossChainSwap.tsx  NetworkSwitcher.tsx  RouteDisplay.tsx  SwapWidget.tsx  TokenSelect.tsx  WalletConnect.tsx
dashboard/: package-lock.json  package.json
dashboard/app/: page.tsx
hooks/: useENS.ts
lib/: ens.ts  gemini.ts  lifi-constants.ts  lifi.ts  router.ts  types.ts
lib/dex/: cetus.ts  index.ts  kriya.ts  turbos.ts
src/: main.rs
src/arbitrage/: detector.rs  executor.rs  mod.rs  price_feed.rs
src/lifi/: mod.rs
src/uniswap/: mod.rs
src/utils/: mod.rs
src/yellow_client/: mod.rs
tests/: integration_test.rs
(+180 files in other folders)
