[package]
name = "instant-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
dotenvy = "0.15.7"
chrono = "0.4.43"
log = "0.4.29"
env_logger = "0.11.8"
alloy = "1.5.2"

# Yellow Network SDK (adjust based on actual SDK)
# Add after testing what's available

[dev-dependencies]
mockito = "1.7.1"
